discussion/kv_engine/130418/130418_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Allow multiple ExecutorPool backends

To facilitate using a Folly executor-based ExecutorPool instead of our
Global Executor added in Couchbase 3.0, rename the existing
ExecutorPool class to 'CB3ExecutorPool', and make ExecutorPool a pure
virtual interface.

Currently this still creates exactly the same CB3-style ExecutorPool,
it just adds an indirection to permit other implementations in future.

Change-Id: Iaded9719a832e529147c2e5a61f72095e6f8360b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-29 16:51:38.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-29 16:59:41.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25416/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25416/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3588/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:153:24: warning: use nullptr [modernize-use-nullptr]
                return NULL;
                       ^~~~
                       nullptr
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:680:9: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
        char statname[80] = {0};
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:731:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char statname[80] = {0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:802:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char statname[80] = {0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:803:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char prefix[] = "ep_tasks";
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:82:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::vector<ExecutorThread*> ThreadQ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
using ThreadQ = std::vector<ExecutorThread *>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:83:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::pair<ExTask, TaskQueue*> TaskQpair;
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:84:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::vector<TaskQueue*> TaskQ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
using TaskQ = std::vector<TaskQueue *>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:233:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~CB3ExecutorPool();
    ~~~~~~~~^
                               override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    static std::mutex initGuard;
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3588/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3588/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2103/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/executorpool_test.h b/engines/ep/tests/module_tests/executorpool_test.h
index 404fe50..fc6053b 100644
--- a/engines/ep/tests/module_tests/executorpool_test.h
+++ b/engines/ep/tests/module_tests/executorpool_test.h
@@ -37,11 +37,8 @@ public:
                      ThreadPoolConfig::ThreadCount maxWriters,
                      size_t maxAuxIO,
                      size_t maxNonIO)
-        : CB3ExecutorPool(maxThreads,
-                          maxReaders,
-                          maxWriters,
-                          maxAuxIO,
-                          maxNonIO) {
+        : CB3ExecutorPool(
+                  maxThreads, maxReaders, maxWriters, maxAuxIO, maxNonIO) {
     }
 
     size_t getNumBuckets() {

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2103/ )
----------------------------------------------------------------------------------------------------------------------
